# algebraic-subtyping

./: ChangeLog.md  README.md  algebraic-subtyping.cabal  stack.yaml
.github/workflows/: continuous-integration.yaml
app/: Main.hs
src/: Coalesce.hs  Examples.hs  FrenchInference.hs  GenerateConstraints.hs  Inference.hs  Parser.hs  Pretty.hs  SolveConstraints.hs  Syntax.hs
test/: Spec.hs
