cabal-version:  2.2
name:           algebraic-subtyping
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/BinderDavid/algebraic-subtyping#readme>
homepage:       https://github.com/BinderDavid/algebraic-subtyping#readme
bug-reports:    https://github.com/BinderDavid/algebraic-subtyping/issues
author:         David Binder
maintainer:     example@example.com
copyright:      2020 David Binder
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/BinderDavid/algebraic-subtyping.git

common shared-build-depends
  build-depends:  base >=4.7 && <5
                , containers
                , mtl
                , repline >= 0.4 && <0.5
                , megaparsec >= 8.0 && < 9
  default-language: Haskell2010

library
  import: shared-build-depends
  exposed-modules:
      Syntax
    , Inference
    , Pretty
    , Coalesce
    , Parser
    , GenerateConstraints
  other-modules:
      Paths_algebraic_subtyping
  hs-source-dirs:
      src
  ghc-options: -Wall

executable algebraic-subtyping
  import: shared-build-depends
  main-is: Main.hs
  other-modules:
      Paths_algebraic_subtyping
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      algebraic-subtyping

test-suite algebraic-subtyping-test
  import: shared-build-depends
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_algebraic_subtyping
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
                algebraic-subtyping
              , hspec
  default-language: Haskell2010
